Added a depletion notebook for the arc2018 model.

--- a/arc2018/arc2018.ipynb
+++ b/arc2018/arc2018.ipynb
@@ -98,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify path to cross section file of desired library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
