--- a/arc2018/arc2018.ipynb
+++ b/arc2018/arc2018.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,161 +263,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                %%%%%%%%%%%%%%%\n",
-      "                           %%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                      %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                                    %%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                                     %%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                 ###############      %%%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                ##################     %%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                ###################     %%%%%%%%%%%%%%%%%%%%%%%\n",
-      "                ####################     %%%%%%%%%%%%%%%%%%%%%%\n",
-      "                #####################     %%%%%%%%%%%%%%%%%%%%%\n",
-      "                ######################     %%%%%%%%%%%%%%%%%%%%\n",
-      "                #######################     %%%%%%%%%%%%%%%%%%\n",
-      "                 #######################     %%%%%%%%%%%%%%%%%\n",
-      "                 ######################     %%%%%%%%%%%%%%%%%\n",
-      "                  ####################     %%%%%%%%%%%%%%%%%\n",
-      "                    #################     %%%%%%%%%%%%%%%%%\n",
-      "                     ###############     %%%%%%%%%%%%%%%%\n",
-      "                       ############     %%%%%%%%%%%%%%%\n",
-      "                          ########     %%%%%%%%%%%%%%\n",
-      "                                      %%%%%%%%%%%\n",
-      "\n",
-      "                 | The OpenMC Monte Carlo Code\n",
-      "       Copyright | 2011-2022 MIT, UChicago Argonne LLC, and contributors\n",
-      "         License | https://docs.openmc.org/en/latest/license.html\n",
-      "         Version | 0.13.0\n",
-      "        Git SHA1 | d9478c1304a37590453eabe3a99e97abb7f92013\n",
-      "       Date/Time | 2022-07-19 09:05:48\n",
-      "   MPI Processes | 1\n",
-      "  OpenMP Threads | 12\n",
-      "\n",
-      " Reading settings XML file...\n",
-      " Reading cross sections XML file...\n",
-      " Reading materials XML file...\n",
-      " Reading geometry XML file...\n",
-      "Set overlap thickness = 0\n",
-      "Set numerical precision = 0.001\n",
-      "Loading file arc2018.h5m\n",
-      "Initializing the GeomQueryTool...\n",
-      "Using faceting tolerance: 0\n",
-      "Building acceleration data structures...\n",
-      "Implicit Complement assumed to be Vacuum\n",
-      " Reading H1 from /home/jlball/xs_data/endfb80_hdf5/H1.h5\n",
-      " Reading H2 from /home/jlball/xs_data/endfb80_hdf5/H2.h5\n",
-      " Reading Be9 from /home/jlball/xs_data/endfb80_hdf5/Be9.h5\n",
-      " Reading F19 from /home/jlball/xs_data/endfb80_hdf5/F19.h5\n",
-      " Reading Li6 from /home/jlball/xs_data/endfb80_hdf5/Li6.h5\n",
-      " Reading Li7 from /home/jlball/xs_data/endfb80_hdf5/Li7.h5\n",
-      " Reading U234 from /home/jlball/xs_data/endfb80_hdf5/U234.h5\n",
-      " Reading U235 from /home/jlball/xs_data/endfb80_hdf5/U235.h5\n",
-      " Reading U238 from /home/jlball/xs_data/endfb80_hdf5/U238.h5\n",
-      " Reading Pb206 from /home/jlball/xs_data/endfb80_hdf5/Pb206.h5\n",
-      " Reading Pb204 from /home/jlball/xs_data/endfb80_hdf5/Pb204.h5\n",
-      " Reading Pb208 from /home/jlball/xs_data/endfb80_hdf5/Pb208.h5\n",
-      " Reading Pb207 from /home/jlball/xs_data/endfb80_hdf5/Pb207.h5\n",
-      " Reading B11 from /home/jlball/xs_data/endfb80_hdf5/B11.h5\n",
-      " Reading B10 from /home/jlball/xs_data/endfb80_hdf5/B10.h5\n",
-      " Reading C12 from /home/jlball/xs_data/endfb80_hdf5/C12.h5\n",
-      " Reading C13 from /home/jlball/xs_data/endfb80_hdf5/C13.h5\n",
-      " Reading Al27 from /home/jlball/xs_data/endfb80_hdf5/Al27.h5\n",
-      " Reading Si29 from /home/jlball/xs_data/endfb80_hdf5/Si29.h5\n",
-      " Reading Si28 from /home/jlball/xs_data/endfb80_hdf5/Si28.h5\n",
-      " Reading Si30 from /home/jlball/xs_data/endfb80_hdf5/Si30.h5\n",
-      " Reading P31 from /home/jlball/xs_data/endfb80_hdf5/P31.h5\n",
-      " Reading S34 from /home/jlball/xs_data/endfb80_hdf5/S34.h5\n",
-      " Reading S33 from /home/jlball/xs_data/endfb80_hdf5/S33.h5\n",
-      " Reading S36 from /home/jlball/xs_data/endfb80_hdf5/S36.h5\n",
-      " Reading S32 from /home/jlball/xs_data/endfb80_hdf5/S32.h5\n",
-      " Reading Ti50 from /home/jlball/xs_data/endfb80_hdf5/Ti50.h5\n",
-      " Reading Ti49 from /home/jlball/xs_data/endfb80_hdf5/Ti49.h5\n",
-      " Reading Ti46 from /home/jlball/xs_data/endfb80_hdf5/Ti46.h5\n",
-      " Reading Ti47 from /home/jlball/xs_data/endfb80_hdf5/Ti47.h5\n",
-      " Reading Ti48 from /home/jlball/xs_data/endfb80_hdf5/Ti48.h5\n",
-      " Reading Cr54 from /home/jlball/xs_data/endfb80_hdf5/Cr54.h5\n",
-      " Reading Cr53 from /home/jlball/xs_data/endfb80_hdf5/Cr53.h5\n",
-      " Reading Cr50 from /home/jlball/xs_data/endfb80_hdf5/Cr50.h5\n",
-      " Reading Cr52 from /home/jlball/xs_data/endfb80_hdf5/Cr52.h5\n",
-      " Reading Mn55 from /home/jlball/xs_data/endfb80_hdf5/Mn55.h5\n",
-      " Reading Fe58 from /home/jlball/xs_data/endfb80_hdf5/Fe58.h5\n",
-      " Reading Fe57 from /home/jlball/xs_data/endfb80_hdf5/Fe57.h5\n",
-      " Reading Fe54 from /home/jlball/xs_data/endfb80_hdf5/Fe54.h5\n",
-      " Reading Fe56 from /home/jlball/xs_data/endfb80_hdf5/Fe56.h5\n",
-      " Reading Ni58 from /home/jlball/xs_data/endfb80_hdf5/Ni58.h5\n",
-      " Reading Ni61 from /home/jlball/xs_data/endfb80_hdf5/Ni61.h5\n",
-      " Reading Ni60 from /home/jlball/xs_data/endfb80_hdf5/Ni60.h5\n",
-      " Reading Ni64 from /home/jlball/xs_data/endfb80_hdf5/Ni64.h5\n",
-      " Reading Ni62 from /home/jlball/xs_data/endfb80_hdf5/Ni62.h5\n",
-      " Reading Co59 from /home/jlball/xs_data/endfb80_hdf5/Co59.h5\n",
-      " Reading Cu63 from /home/jlball/xs_data/endfb80_hdf5/Cu63.h5\n",
-      " Reading Cu65 from /home/jlball/xs_data/endfb80_hdf5/Cu65.h5\n",
-      " Reading Nb93 from /home/jlball/xs_data/endfb80_hdf5/Nb93.h5\n",
-      " Reading Mo97 from /home/jlball/xs_data/endfb80_hdf5/Mo97.h5\n",
-      " Reading Mo100 from /home/jlball/xs_data/endfb80_hdf5/Mo100.h5\n",
-      " Reading Mo94 from /home/jlball/xs_data/endfb80_hdf5/Mo94.h5\n",
-      " Reading Mo98 from /home/jlball/xs_data/endfb80_hdf5/Mo98.h5\n",
-      " Reading Mo96 from /home/jlball/xs_data/endfb80_hdf5/Mo96.h5\n",
-      " Reading Mo92 from /home/jlball/xs_data/endfb80_hdf5/Mo92.h5\n",
-      " Reading Mo95 from /home/jlball/xs_data/endfb80_hdf5/Mo95.h5\n",
-      " Reading W182 from /home/jlball/xs_data/endfb80_hdf5/W182.h5\n",
-      " Reading W186 from /home/jlball/xs_data/endfb80_hdf5/W186.h5\n",
-      " Reading W184 from /home/jlball/xs_data/endfb80_hdf5/W184.h5\n",
-      " Reading W180 from /home/jlball/xs_data/endfb80_hdf5/W180.h5\n",
-      " Reading W183 from /home/jlball/xs_data/endfb80_hdf5/W183.h5\n",
-      " Minimum neutron data temperature: 294 K\n",
-      " Maximum neutron data temperature: 294 K\n",
-      " Reading tallies XML file...\n",
-      " Preparing distributed cell instances...\n",
-      " Reading plot XML file...\n",
-      " Writing summary.h5 file...\n",
-      " Maximum neutron transport energy: 20000000 eV for H1\n",
-      "\n",
-      " ===============>     FIXED SOURCE TRANSPORT SIMULATION     <===============\n",
-      "\n",
-      " Simulating batch 1\n",
-      " Simulating batch 2\n",
-      " Simulating batch 3\n",
-      " Simulating batch 4\n",
-      " Simulating batch 5\n",
-      " Simulating batch 6\n",
-      " Simulating batch 7\n",
-      " Simulating batch 8\n",
-      " Simulating batch 9\n",
-      " Simulating batch 10\n",
-      " Creating state point statepoint.10.h5...\n",
-      "\n",
-      " =======================>     TIMING STATISTICS     <=======================\n",
-      "\n",
-      " Total time for initialization     = 7.3322e+00 seconds\n",
-      "   Reading cross sections          = 6.9284e+00 seconds\n",
-      " Total time in simulation          = 2.8767e+02 seconds\n",
-      "   Time in transport only          = 2.8738e+02 seconds\n",
-      "   Time in active batches          = 2.8767e+02 seconds\n",
-      "   Time accumulating tallies       = 2.8762e-01 seconds\n",
-      "   Time writing statepoints        = 3.7881e-03 seconds\n",
-      " Total time for finalization       = 6.2511e-05 seconds\n",
-      " Total time elapsed                = 2.9501e+02 seconds\n",
-      " Calculation Rate (active)         = 8690.46 particles/second\n",
-      "\n",
-      " ============================>     RESULTS     <============================\n",
-      "\n",
-      " Leakage Fraction            = 0.14426 +/- 0.00024\n",
-      "\n"
+      "openmc: error while loading shared libraries: libMOAB.so.5: cannot open shared object file: No such file or directory\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/jlball/arc-proliferation/arc2018/statepoint.10.h5')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "OpenMC aborted unexpectedly.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/home/jlball/arc-proliferation/arc2018/arc2018.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jlball/arc-proliferation/arc2018/arc2018.ipynb#ch0000017vscode-remote?line=1'>2</a>\u001b[0m model \u001b[39m=\u001b[39m openmc\u001b[39m.\u001b[39mModel(\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jlball/arc-proliferation/arc2018/arc2018.ipynb#ch0000017vscode-remote?line=2'>3</a>\u001b[0m     materials\u001b[39m=\u001b[39mmaterials, geometry\u001b[39m=\u001b[39mgeometry, settings\u001b[39m=\u001b[39msettings, tallies\u001b[39m=\u001b[39mtallies\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jlball/arc-proliferation/arc2018/arc2018.ipynb#ch0000017vscode-remote?line=3'>4</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jlball/arc-proliferation/arc2018/arc2018.ipynb#ch0000017vscode-remote?line=5'>6</a>\u001b[0m \u001b[39m# starts the simulation\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jlball/arc-proliferation/arc2018/arc2018.ipynb#ch0000017vscode-remote?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39;49mrun(threads\u001b[39m=\u001b[39;49m\u001b[39m12\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/openmc/model/model.py:584\u001b[0m, in \u001b[0;36mModel.run\u001b[0;34m(self, particles, threads, geometry_debug, restart_file, tracks, output, cwd, openmc_exec, mpi_args, event_based)\u001b[0m\n\u001b[1;32m    581\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    582\u001b[0m     \u001b[39m# Then run via the command line\u001b[39;00m\n\u001b[1;32m    583\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexport_to_xml()\n\u001b[0;32m--> 584\u001b[0m     openmc\u001b[39m.\u001b[39;49mrun(particles, threads, geometry_debug, restart_file,\n\u001b[1;32m    585\u001b[0m                tracks, output, Path(\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m'\u001b[39;49m), openmc_exec, mpi_args,\n\u001b[1;32m    586\u001b[0m                event_based)\n\u001b[1;32m    588\u001b[0m \u001b[39m# Get output directory and return the last statepoint written\u001b[39;00m\n\u001b[1;32m    589\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msettings\u001b[39m.\u001b[39moutput \u001b[39mand\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mpath\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msettings\u001b[39m.\u001b[39moutput:\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/openmc/executor.py:276\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(particles, threads, geometry_debug, restart_file, tracks, output, cwd, openmc_exec, mpi_args, event_based)\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[39m\"\"\"Run an OpenMC simulation.\u001b[39;00m\n\u001b[1;32m    233\u001b[0m \n\u001b[1;32m    234\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    268\u001b[0m \n\u001b[1;32m    269\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    271\u001b[0m args \u001b[39m=\u001b[39m _process_CLI_arguments(\n\u001b[1;32m    272\u001b[0m     volume\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, geometry_debug\u001b[39m=\u001b[39mgeometry_debug, particles\u001b[39m=\u001b[39mparticles,\n\u001b[1;32m    273\u001b[0m     restart_file\u001b[39m=\u001b[39mrestart_file, threads\u001b[39m=\u001b[39mthreads, tracks\u001b[39m=\u001b[39mtracks,\n\u001b[1;32m    274\u001b[0m     event_based\u001b[39m=\u001b[39mevent_based, openmc_exec\u001b[39m=\u001b[39mopenmc_exec, mpi_args\u001b[39m=\u001b[39mmpi_args)\n\u001b[0;32m--> 276\u001b[0m _run(args, output, cwd)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/openmc/executor.py:116\u001b[0m, in \u001b[0;36m_run\u001b[0;34m(args, output, cwd)\u001b[0m\n\u001b[1;32m    113\u001b[0m     error_msg \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mOpenMC aborted unexpectedly.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    114\u001b[0m error_msg \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(error_msg\u001b[39m.\u001b[39msplit())\n\u001b[0;32m--> 116\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(error_msg)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: OpenMC aborted unexpectedly."
+     ]
     }
    ],
    "source": [
@@ -433,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('openmc_env': conda)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -447,12 +308,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45e764e0f938d6b30040af0e2374672beafce835508174d490be8d126b170f5b"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
