--- a/arc2018/arc2018_depletion_scan.ipynb
+++ b/arc2018/arc2018_depletion_scan.ipynb
@@ -4018,7 +4018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4044,7 +4044,7 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.scatter(percents_fertile, times_to_sq/(60*60*24))\n",
+    "ax.scatter(percents_fertile, times_to_sq/(60*60*24*365))\n",
     "\n",
     "print(times_to_sq)\n",
     "\n",
