--- a/arc2018/arc2018.ipynb
+++ b/arc2018/arc2018.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import openmc\n",
     "import neutronics_material_maker as nmm\n",
-    "import math\n"
+    "import math"
    ]
   },
   {
